# llm_basics_project

./: README.md
agents/evaluator/: __init__.py  evaluator_agent.py  rubrics.py  tools.py  tools_specification.md
agents/tutor/: __init__.py  tools.py  tutor_agent.py
data/: README.md  build_faiss_wiki.py  export_faiss_to_json.py  inspect_faiss_index.py  pyproject.toml  requirements.txt
data/dataset/: attack_prompts.csv  student_questions_with_targets.csv
data/faiss_kitesurf_wiki/private/: index.faiss  index.pkl
data/faiss_kitesurf_wiki/public/: index.faiss  index.pkl
docs/: AGENT_ARCHITECTURE.md  ev_tools_specification.md  tut_tools_specification.md
reports/: checkpoint_1.md  checkpoint_2.md  checkpoint_3.md
results/: evaluator_metrics_20251213_162449.json  evaluator_results_20251213_162449.json  tutor_metrics_20251213_162158.json  tutor_results_20251213_162158.json
tests/: __init__.py  test_agents.py
