[tool.poetry]
name = "rag"
version = "0.1.0"
description = "Wikipedia Kitesurfing RAG Index"
authors = ["a.kirillov <1y2u3i4@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain = ">=0.3.0"
langchain-community = ">=0.3.0"
langchain-text-splitters = ">=0.3.0"
langchain-huggingface = ">=0.1.0"
faiss-cpu = ">=1.8.0"
wikipedia = ">=1.4.0"
sentence-transformers = ">=2.2.0"
langchain-openai = ">=0.2.0"
tqdm = ">=4.66.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
